2006-09-30 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/port.h: added mem.cabs_name to PORT
	* src/ds390/main.c,
	* src/hc08/main.c,
	* src/mcs51/main.c,
	* src/pic16/main.c,
	* src/pic/main.c,
	* src/xa51/main.c,
	* src/z80/main.c: added cabs_name initializers
	* src/SDCCglue.c (emitStaticSeg): allocate and initialize absolute
	  constants
	  (emitMaps): emit absolutes in code memory into cabs_name
	* src/SDCCmem.c,
	* src/SDCCmem.h: added memory map c_abs and defined CABS_NAME
	* src/ds390/gen.c (genCodePointerGet): fixed bug if left is a literal
	* support/regression/fwk/include/testfwk.h: added define for at
	* support/regression/tests/absolute.c: added, new

2006-09-29 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c (genPlusIncr, genMinusDec, genAddrOf): small
	  optimizations, see also patch 887161 by Stas Sergeev
	* src/mcs51/peeph.def(104, 207, 209, 212): disabled as they do not seem
	  to be necessary anymore,
	  (102, 103, 104, 127): renamed all occurances of bp to _bp

2006-09-27 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/mcs51/at89c51snd1c.h: fixed MSK_SREQ definition
	  thanks Weston T. Schmidt for patch 1555221
	* src/mcs51/peeph.def: renamed rule 257 to 257.a, added 257.b
	* src/SDCCicode.c(geniCodeMultiply): small optimization

2006-09-26 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/stdlib.h: added rand prototypes
	* device/lib/rand.c: new, added
	* device/lib/Makefile.in: added rand.c
	* src/z80/peeph.def,
	* src/z80/peeph-gbz80.def,
	* src/z80/peeph-z80.def: updated conditonals, fixed bug 1565908

2006-09-20 Raphael Neider <rneider AT web.de>

	* device/lib/pic16/libio/i2c/i2cnack.c (i2c_nack): fixed ACKDT bit

2006-09-19 Maarten Brock <sourceforge.brock AT dse.nl>

	* as/link/aslink.h: cosmetic changes
	* as/link/mcs51/Makefile.in,
	* as/link/z80/Makefile.in: fixed build on CF where VPATH is used

2006-09-17 Maarten Brock <sourceforge.brock AT dse.nl>

	* as/link/aslink.h,